# Haskell2FHE

./: .gitignore  CMakeLists.txt  CircuitGraph.cpp  CircuitGraph.h  Evaluator.cpp  Evaluator.h  README.md  clash2tfhe  deprecated_build.sh  main.cpp  run.sh  run_complete.sh  test_circuit0.json  test_circuit1.json  test_circuit2.json  test_circuit3.json  yosys_script.ys
secretkeygenerator/: decrypt.c  encrypt  encrypt.c  gen_and_encrypt  gen_and_encrypt.c
tests/: circuitgraph_tests.cpp  circuitgraph_tests.h
tests/programs/ADD64/: Project.hs  add64.json  add_32bit.json  add_32bit.txt  add_64bitu.json  add_8bit.json  add_8bit_unsigned.json
tests/programs/AES/: AESencrypt.hs  AESnewBristol.txt  AESoldBristol  README.md
tests/programs/CALC/: Project.hs  calc.json
tests/programs/PIR/: PIR100.json  PIR20.json  PIR3foldl.json  PIR3reduceor.json  PIR6.json  Project.hs  executePIR100.sh  pir.json  pir.sh  pir1.json  splitPIR3ways0.json  splitPIR3ways1.json  splitPIR3ways2.json  splitPIR3ways3.json
tests/programs/PIR/tools/: build_tfhe_tools.sh  decrypt  decrypt.c  decryptKashif  keygen  keygen.c  sym_encrypt_100  sym_encrypt_100.c
tests/programs/RELU/: Project.hs  relu.json
tfhe-tools/: decrypt  decrypt.c  encrypt.c  keygen.c  sym_encrypt  sym_encrypt.c
